the calculator bug is fixed

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -50,7 +50,7 @@
 			</tbody>
 		</table>
 	</div>
-<script src="/3-oy/Calculator/js/move.js"></script>
-<script src="/3-oy/Calculator/js/main.js"></script>
+<script src="./js/move.js"></script>
+<script src="./js/main.js"></script>
 </body>
 </html>
